--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Ikon Dj</string>
+    <string name="profile">Profile Info</string>
     <string name="myFeed">My Feed</string>
     <string name="bookingRequest">Bookings</string>
     <string name="ChatArea">Chat Room</string>
