final done with dj app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="SocialMediaFram">Social Media Fram</string>
     <string name="ViewSong">All Song Requests</string>
     <string name="Services">My Services</string>
-    <string name="SubscribeArtist">Subscribe Artist</string>
+    <string name="Notification">Create Notification</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
