popup menu and some remaing ui done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="ViewSong">All Song Requests</string>
     <string name="Services">My Services</string>
     <string name="Notification">Create Notification</string>
+    <string name="UserAdmin">User Admin</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
