--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
         <item>Fixed Rate</item>
         <item>Rate Per Hour</item>
     </string-array>
+
+    //facebook
+    <string name="facebook_app_id">976806959457745</string>
+    <string name="fb_login_protocol_scheme">fb976806959457745</string>
 </resources>
