--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="ViewSong">All Song Requests</string>
     <string name="Services">My Services</string>
     <string name="Bank">Bank Details</string>
+    <string name="ReferralUser">Referral Users</string>
     <string name="WithDraw">Withdraw History</string>
     <string name="Notification">Create Notification</string>
     <string name="UserAdmin">User Admin</string>
