--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="myFeed">My Feed</string>
     <string name="bookingRequest">Bookings</string>
     <string name="ChatArea">Chat Room</string>
-    <string name="SocialMediaFram">Social Media Fram</string>
+    <string name="SocialMediaFram">Social Media Frame</string>
     <string name="ViewSong">All Song Requests</string>
     <string name="Services">My Services</string>
     <string name="Bank">Bank Details</string>
