updates after IOS Bug founds

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="Bank">Bank Details</string>
     <string name="ReferralUser">Referral Users</string>
     <string name="PaymentHistory">Payment History</string>
-    <string name="WithDraw">With History</string>
+    <string name="WithDraw">Withdraw History</string>
     <string name="Notification">Create Notification</string>
     <string name="UserAdmin">User Admin</string>
 
